shitty uri fixing

--- a/tpl/capes.twig
+++ b/tpl/capes.twig
@@ -23,7 +23,7 @@
             </div>
             {% if v.image is not null %}
                 <div class="col-md-4">
-                  <img class="img-fluid" src="{{ v.image }}" />
+                  <img class="img-fluid" src="{{ base }}/{{ v.image }}" />
                 </div>
             {% endif %}
           </div>
