--- a/tpl/base.twig
+++ b/tpl/base.twig
@@ -4,7 +4,7 @@
     <title>{% block title %}PRT SAGA Database{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="{{ base }}/css/style.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -12,7 +12,7 @@
   <body>
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-4"><a href="/">PRT <em>SAGA</em> Database</a></h1>
+        <h1 class="display-4"><a href="{{ base }}/">PRT <em>SAGA</em> Database</a></h1>
       </div>
     </div>
     <div class="container">
@@ -24,7 +24,7 @@
               <p>Saved Searches:</p>
               <ul>
                 {% for k,v in searches %}
-                    <li><a href="/{{ k }}">{{ v.name }}</a></li>
+                    <li><a href="{{ base }}/{{ k }}">{{ v.name }}</a></li>
 
                 {% endfor %}
               </ul>
