add base to prt logo

--- a/tpl/base.twig
+++ b/tpl/base.twig
@@ -43,7 +43,7 @@
       {% endblock %}
       <div class="row pt-5 pb-2">
         <div class="col-md-2">
-          <a href="https://prt.gov/"><img class="img-fluid" src="/img/prtLogo.png" alt="" /></a>
+          <a href="https://prt.gov/"><img class="img-fluid" src="{{ base }}/img/prtLogo.png" alt="" /></a>
         </div>
         <div class="col-md-10 prt">
           <p><small><span class="prtHeader">Support</span>: <em>SAGA</em> support can be found via your department's IT support contact, or through your regional PRT helpdesk. As part of the PRT's Open Government initiative, <em>SAGA</em> is <a href="https://github.com/sylae/DoaPK">open-source software</a>.</small></p>
