--- a/css/style.scss
+++ b/css/style.scss
@@ -120,3 +120,12 @@ footer {
     text-indent: -1em;
     padding-left: 1em;
 }
+
+.capeImage {
+    max-width: 500px;
+    width: 100%;
+}
+
+img {
+    max-width: 100%;
+}
