--- a/tpl/view.twig
+++ b/tpl/view.twig
@@ -14,9 +14,36 @@
 {% block body %}
   <div class="row">
     {% for k, v in records %}
+      <h1>{{v.name}}</h1>
+      <div class="prt">
+      {% if v.intelAgency|length > 0 %}
+      <p class="prtMinor">CONFIDENTIAL//{{ v.intelAgency|join('/') }}//ORCON</p>
+      {% else %}
+      <p class="prtMinor">FOR PUBLIC RELEASE</p>
+      {% endif %}
+      <p class="prtMinor">PARAHUMAN RESPONSE TEAM<br />
+        PACIFIC NORTHWEST DIVISION - PORTLAND OFFICE<br />
+        INTELLIGENCE BUREAU</p>
+
+      <p class="prtMinor">Parahuman Intelligence Record<br />{{v.getLongTag()}}</p>
+
+      {%if v.notePostPIR is not empty %}
+        <p class="prtMinor">{{ v.notePostPIR }}</p>
+      {% endif %}
+
+
       {% if v is instanceof('PRT\\Cape') %}
         {{ include('view_Cape.twig') }}
       {% endif %}
+      {% if v is instanceof('PRT\\Media') %}
+        {{ include('view_Media.twig') }}
+      {% endif %}
+
+
+      {% if v.intelAgency|length > 0 %}
+      <p class="prtMinor">CONFIDENTIAL//{{ v.intelAgency|join('/') }}//ORCON</p>
+      {% endif %}
+      </div>
 
     {% endfor %}
   </div>
