--- a/css/style.scss
+++ b/css/style.scss
@@ -25,7 +25,7 @@ header a {
 header h1 {
     padding-left: 3em;
     font-size: 1.5em;
-    background-image: url("/img/prtLogoOutline.png");
+    background-image: url("../img/prtLogoOutline.png");
     background-repeat: no-repeat;
     background-size: 2.5em;
 	background-position: top left;
