--- a/tpl/view_Media.twig
+++ b/tpl/view_Media.twig
@@ -1,23 +1,25 @@
-<p><span class = "prtHeader">File Topic</span>: {{ v.name }}</p>
+<p><span class="prtHeader">File Topic</span>: {{ v.name }}</p>
 
-{%if v.groups|length > 0 %}
-  <p><span class="prtHeader">Filed under</span>: {{ v.groups|join(', ') }}</p>
+{% if v.groups|length > 0 %}
+    <p><span class="prtHeader">Filed under</span>: {{ v.groups|join(', ') }}</p>
 {% endif %}
 
-{%if v.artist is not empty %}
-<p><span class="prtHeader">Creator</span>: <a href="{{ v.artistURL }}">{{ v.artist }}</a></p>
+{% if v.artist is not empty %}
+    <p><span class="prtHeader">Creator</span>: <a href="{{ v.artistURL }}">{{ v.artist }}</a></p>
 {% endif %}
 
-{%if v.remarks is not empty %}
-<p><span class="prtHeader">Remarks</span>: {{ v.remarks }}</p>
+{% if v.remarks is not empty %}
+    <p><span class="prtHeader">Remarks</span>: {{ v.remarks }}</p>
 {% endif %}
 
 {% if v.image is not null %}
-  <div class="capeImage">
-    <a href="{{ base }}/img/{{ v.image }}"><img src="{{ base }}/img/{{ v.image }}" alt="{{ v.name }}" /></a>
-  </div>
+    <div class="capeImage">
+        <a href="{{ base }}/img/{{ v.image }}"><img src="{{ base }}/img/{{ v.image }}" alt="{{ v.name }}" /></a>
+    </div>
 {% endif %}
 
-{% if v.getRefs(v)|length > 0  %}
-  <p><span class="prtMinor"><span class="prtHeader">Linked files</span>: {{ include(template_from_string(v.linkedFilesString(v.getRefs(v)))) }}</p>
+{% if v.getRefs(v)|length > 0 %}
+    <p><span class="prtMinor"><span
+                    class="prtHeader">Linked files</span>: {{ include(template_from_string(v.linkedFilesString(v.getRefs(v)))) }}
+    </p>
 {% endif %}
