--- a/tpl/base.twig
+++ b/tpl/base.twig
@@ -27,39 +27,41 @@
         <li><a href="{{ base }}/">Logout</a></li>
     </ul>
 </nav>
-<main>
-    <div class="searchInfo">
-        {% block searchInfo %}
-            <h3>Welcome to the PRT <em>SAGA</em> Database application</h3>
-            <p>You have access to {{ count|number_format }} PIR entries.</p>
-            <p>Saved Searches:</p>
-            <ul class="savedSearches">
-                {% for k,v in searches %}
-                    <li><a href="{{ base }}/{{ k }}">{{ v.name }}</a></li>
+<div class="container">
+    <main>
+        <div class="searchInfo">
+            {% block searchInfo %}
+                <h3>Welcome to the PRT <em>SAGA</em> Database application</h3>
+                <p>You have access to {{ count|number_format }} PIR entries.</p>
+                <p>Saved Searches:</p>
+                <ul class="savedSearches">
+                    {% for k,v in searches %}
+                        <li><a href="{{ base }}/{{ k }}">{{ v.name }}</a></li>
 
-                {% endfor %}
-            </ul>
-        {% endblock %}
-    </div>
-    <div class="content">
-        {% block body %}
-            <section>
-                <p><strong>To begin, please choose a saved search from the above options.</strong></p>
-            </section>
-        {% endblock %}
-    </div>
-</main>
-<footer class="prt">
-    <p>
-        <small><span class="prtHeader">Support</span>: <em>SAGA</em> support can be found via your department's IT
-            support contact, or through your regional PRT helpdesk. As part of the PRT's Open Government initiative,
-            <em>SAGA</em> is <a href="https://github.com/sylae/DoaPK">open-source software</a>.
-        </small>
-    </p>
-    <p>
-        <small><span class="prtMinor">For official use only. Unauthorized release of information is a violation of Federal Law under 18 U.S.C. § 798, as well as state and local laws as applicable. For more information, please contact your department PRT-IB officer.</span>
-        </small>
-    </p>
-</footer>
+                    {% endfor %}
+                </ul>
+            {% endblock %}
+        </div>
+        <div class="content">
+            {% block body %}
+                <section>
+                    <p><strong>To begin, please choose a saved search from the above options.</strong></p>
+                </section>
+            {% endblock %}
+        </div>
+    </main>
+    <footer class="prt">
+        <p>
+            <small><span class="prtHeader">Support</span>: <em>SAGA</em> support can be found via your department's IT
+                support contact, or through your regional PRT helpdesk. As part of the PRT's Open Government initiative,
+                <em>SAGA</em> is <a href="https://github.com/sylae/DoaPK">open-source software</a>.
+            </small>
+        </p>
+        <p>
+            <small><span class="prtMinor">For official use only. Unauthorized release of information is a violation of Federal Law under 18 U.S.C. § 798, as well as state and local laws as applicable. For more information, please contact your department PRT-IB officer.</span>
+            </small>
+        </p>
+    </footer>
+</div>
 </body>
 </html>
